--- a/src/component/Content/content.css
+++ b/src/component/Content/content.css
@@ -34,9 +34,9 @@ p {
     height: 40px;
     background: #FFBF19;
     /* right: 190px; */
-    top: -5px;
+    /* top: -15px; */
 
-    right: 0;
+    /* right: 0; */
 }
 
 .data {
@@ -54,13 +54,22 @@ p {
     font-size: 20px;
     line-height: 28px;
     color: #FFBF19;
-    border-bottom: 1px solid #FFBF19;
-    padding-bottom: 4px;
     text-decoration: none !important;
+    transition: .3s;
 }
 
 .more:hover {
     color: #FFBF19;
+    margin-right: 30px !important;
+    transition: .3s;
+}
+
+.arrLeft{
+    
+}
+
+.more:hover .arrLeft{
+    margin-left: 200px !important;
 }
 
 
@@ -74,6 +83,20 @@ p {
 @media screen and (max-width: 1199px) {
     .dot {
         display: none !important;
+    }
+
+}
+
+@media screen and (max-width: 369px) {
+
+    .content h2 {
+        font-size: 25px;
+    }
+
+    .content p{
+        margin-top: 20px !important;
+        font-size: 14px;
+        line-height: 30px;
     }
 
 }
