--- a/src/component/Footer/footer.css
+++ b/src/component/Footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     text-align: center;
     padding: 32px 0;
-    background: #697C37;
+    background: #586B24;
     font-family: "Nunito";
     color: white;
     font-weight: 400;
